# video_palyer

./: .gitignore  CMakeLists.txt  README.md  VideoPlayer.cpp  VideoPlayer.h  main.cpp  queue.h
src/: main.cpp  threadsafe_queue.h  videoplayer.cpp  videoplayer.h
